# pet-train

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  Makefile  NOTICE  README.md  params.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  no-wandb-residue.yml  peer-dep-smoke.yml  release-version-consistency.yml
configs/audio/: mobilenetv2_transfer_v1.yaml
configs/base/: dpo_base.yaml  sft_base.yaml
configs/experiments/: dpo_user_feedback_v1.yaml  sft_lora_r16_lr2e4_ep3.yaml
docs/: architecture.md  phase-3a-audit.md  training-experiment-report.md
docs/superpowers/plans/: 2026-04-15-pet-train-implementation.md
docs/superpowers/specs/: 2026-04-15-pet-train-design.md
scripts/: collect_logits.sh  eval_after_train.sh  merge_lora.sh  train_audio.sh  train_dpo.sh  train_sft.sh
src/: __init__.py  audio_inference.py
src/pet_train/: __init__.py  audio_inference.py  audio_model.py  audio_model_arch.py  audio_transforms.py  kl_loss.py  lineage.py  schema_compliance_callback.py
src/pet_train/audio/: arch.py  inference.py  panns_inference_plugin.py  transforms.py
src/pet_train/logits_provider/: __init__.py  api_provider.py  base.py  file_provider.py
src/pet_train/plugins/: _register.py  data_validation.py  llamafactory_dpo.py  llamafactory_sft.py  tiny_test.py
tests/: conftest.py  test_audio_inference.py  test_audio_params.py  test_audio_transforms.py  test_kl_loss.py  test_lineage.py  test_logits_provider.py  test_schema_compliance_callback.py  test_version.py
tests/plugins/: test_data_validation.py  test_llamafactory_dpo.py  test_llamafactory_sft.py  test_peer_dep_guards.py  test_register.py  test_tiny_test.py
