[build-system]
requires = [
    "setuptools>=68.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pet-train"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pet-schema @ git+https://github.com/Train-Pet-Pipeline/pet-schema.git@v1.0.0",
    "pet-infra @ git+https://github.com/Train-Pet-Pipeline/pet-infra.git@v1.0.0",
    "torch>=2.1",
    "torchaudio>=2.1",
    "pytorch-lightning>=2.1",
    "pyyaml",
    "tenacity",
    "python-json-logger",
    "httpx",
    "soundfile",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "soundfile",
]

[tool.setuptools.packages.find]
where = [
    "src",
]
include = [
    "pet_train",
    "pet_train.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
]

[tool.mypy]
disable_error_code = ["import-untyped"]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
