[build-system]
requires = [
    "setuptools>=68.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pet-train"
version = "2.2.5"
license = {text = "BUSL-1.1"}
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.1",
    "torchaudio>=2.1",
    "pytorch-lightning>=2.1",
    "pyyaml",
    "tenacity",
    "python-json-logger",
    "httpx",
    "soundfile",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "soundfile",
]

[project.entry-points."pet_infra.plugins"]
pet_train = "pet_train.plugins._register:register_all"

[tool.setuptools.packages.find]
where = [
    "src",
]
include = [
    "pet_train",
    "pet_train.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
]

[tool.mypy]
disable_error_code = ["import-untyped"]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
